--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title><b><i>Ram Niwas</b></i></title>
 </head>
-<body bgcolor="yellow">
+<body bgcolor="white">
   Welcome to Salunkhe Family ... <br>
   <h3 align="center">
     <table>
